Avoid page breaks in the middle of charts for print layout

--- a/_includes/css/site.scss
+++ b/_includes/css/site.scss
@@ -353,6 +353,7 @@ svg
     {
         $aspect-ratio: 16 / 9;
         padding-top: 100% / $aspect-ratio;
+        page-break-inside: avoid;
         position: relative;
 
         > img
